--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<!-- Mirrored from pxltheme.com/html/bolby/demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 16 Aug 2020 16:35:50 GMT -->
+<!-- Mirrored from pxltheme.com/html/./vtm/demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 16 Aug 2020 16:35:50 GMT -->
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>PORTFOLIO Tegar Faiz</title>
@@ -74,7 +74,7 @@
 		<!-- logo image -->
 		<div class="site-logo">
 			<a href="index.html">
-				<img src="images/logo.svg" alt="Bolby" />
+				<img src="images/logo.svg" alt="./vtm" />
 			</a>
 		</div>
 	</div>
@@ -192,7 +192,7 @@
 				<div class="col-md-3">
 					<div class="text-center text-md-left">
 						<!-- avatar image -->
-						<img src="images/avatar-2.svg" alt="Bolby" />
+						<img src="images/avatar-2.svg" alt="./vtm" />
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
@@ -556,7 +556,7 @@
 
 				<div class="col-md-8">
 					<!-- Contact Form -->
-					<form id="contact-form" class="contact-form mt-6" method="post" action="https://tegarfaiz.me/send_email.php">
+					<form id="contact-form" class="contact-form mt-6" >
 
 						
 						<div class="messages"></div>
@@ -635,5 +635,5 @@
 
 </body>
 
-<!-- Mirrored from pxltheme.com/html/bolby/demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 16 Aug 2020 16:37:19 GMT -->
+<!-- Mirrored from pxltheme.com/html/./vtm/demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 16 Aug 2020 16:37:19 GMT -->
 </html>
