--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
 							<div class="column col-md-12">
 								<!-- Email input -->
 								<div class="form-group">
-									<input type="text" class="form-control" id="InputSubject" name="InputSubject" placeholder="Subject" required="required" data-error="Subject is required.">
+									<input type="text" class="form-control" id="subject" name="InputSubject" placeholder="Subject" required="required" data-error="Subject is required.">
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
@@ -589,7 +589,7 @@
 							<div class="column col-md-12">
 								<!-- Message textarea -->
 								<div class="form-group">
-									<textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" placeholder="Message" required="required" data-error="Message is required."></textarea>
+									<textarea name="InputMessage" id="message" class="form-control" rows="5" placeholder="Message" required="required" data-error="Message is required."></textarea>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
@@ -608,9 +608,12 @@
 							    To : 'tegar.faiz.21@gmail.com',
 							    From : document.getElementById("Email").value,
 							    Subject : "Lowongan Kerja",
-							    Body : "And this is the body"
+							    Body : "name: "+ document.getElementById("name").value
+								+ "<br> Email: "+ document.getElementById("email").value
+								+ "<br> Subject: "+ document.getElementById("subject").value
+								+ "<br> Message: "+ document.getElementById("message").value
 							}).then(
-							  message => alert(message)
+							  message => alert("message sent succesfully")
 							);
 						}
 					</script>
