--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
 							    Host : "smtp.gmail.com",
 							    Username : "autoemailtegar@gmail.com",
 							    Password : "polisi123",
-							    To : 'tegar.faiz.21@gmail.com',
+							    To : 'autoemailtegar@gmail.com',
 							    From : document.getElementById("Email").value,
 							    Subject : "Lowongan Kerja",
 							    Body : "name: "+ document.getElementById("name").value
