--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
 
 				<div class="col-md-8">
 					<!-- Contact Form -->
-					<form onsubmit="sendmail(); reset(); return false;" class="contact-form mt-6" >
+					<form onsubmit="sendEmail(); reset(); return false;" class="contact-form mt-6" >
 
 						
 						<div class="messages"></div>
@@ -565,7 +565,7 @@
 							<div class="column col-md-6">
 								<!-- Name input -->
 								<div class="form-group">
-									<input type="text" class="form-control" name="name" id="name" placeholder="Your name" required="required" data-error="Name is required.">
+									<input type="text" class="form-control" id="name" placeholder="Your name" required="required" data-error="Name is required.">
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
@@ -573,7 +573,7 @@
 							<div class="column col-md-6">
 								<!-- Email input -->
 								<div class="form-group">
-									<input type="email" class="form-control" id="email" name="email" placeholder="Email address" required="required" data-error="Email is required.">
+									<input type="email" class="form-control" id="email"  placeholder="Email address" required="required" data-error="Email is required.">
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
@@ -581,7 +581,7 @@
 							<div class="column col-md-12">
 								<!-- Email input -->
 								<div class="form-group">
-									<input type="text" class="form-control" id="subject" name="InputSubject" placeholder="Subject" required="required" data-error="Subject is required.">
+									<input type="text" class="form-control" id="subject" placeholder="Subject" required="required" data-error="Subject is required.">
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
@@ -595,7 +595,7 @@
 							</div>
 						</div>
 
-						<button type="submit" name="submit" id="submit" value="Submit" class="btn btn-default">Kirim Pesan</button><!-- Send Button -->
+						<button type="submit" class="btn btn-default">Kirim Pesan</button><!-- Send Button -->
 
 					</form>
 					<script src="https://smtpjs.com/v3/smtp.js"></script>
