--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
 							Email.send({
 							    Host : "smtp.gmail.com",
 							    Username : "autoemailtegar@gmail.com",
-							    Password : "polisi123",
+							    Password : "POLice123",
 							    To : 'tegar.faiz.21@gmail.com',
 							    From : document.getElementById("Email").value,
 							    Subject : "Lowongan Kerja",
